Added submit button logic

--- a/api-endpoint.html
+++ b/api-endpoint.html
@@ -77,7 +77,7 @@ This represents an entire api endpoint with settings and code
 
         <iron-ajax
                 id="ajaxPost"
-                url="/v1/create"
+                url="cache/v1/create"
                 method="POST"
                 content-type="application/json"
                 handle-as="json"
